# main_state

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  mainpage.dox  mainstate_tutorial.docx  manifest.xml  object.tex  package.xml  skuba_package_update.sh
config/: location.txt  location.xml  location_category.xml  location_information.xml  locations.txt  object_catagory.txt  object_information.xml  object_locations.txt  objects.txt  people_information.xml  restaurant.txt  restaurant_location_information.xml  search_sequence.txt  search_sequence_emerwq.txt  verbs.txt
launch/: EEGPSR.launch  GPSR.launch  RIPS.launch  RoboZoo.launch  basic_functionality.launch  cleanup.launch  cleanup_jp.launch  cocktail.launch  cocktail2.launch  cp_answer_and_read_qr.launch  cp_walk_open.launch  demo.launch  emer.launch  final.launch  finalDemo.launch  follow_guiding.launch  followme.launch  inspection.launch  joy_state.launch  manipulation.launch  move_group_python_interface_tutorial.launch  navigation_task.launch  openC.launch  restaurant.launch  restaurant_cin.launch  restaurant_frank.launch  restaurant_vdo.launch  rip.launch  robo_nurse.launch  separate_cloth.launch  shopping.launch  speech_recognition.launch  technical_challenge.launch  test.launch  testGesture.launch  testMani.launch  test_bug_arm.launch  test_detect_and_move_to_person.launch  test_find_person.launch  test_follow_leg.launch  (+11 more)
new_nodes/: .fon_ctrl_test.py.swo  control_module.py  controller_tester.py  fon_test_manipulator.py  main.py  open_challenge.py  perception_module.py  planning_module.py  robozoo.py
(+370 files in other folders)
