<package>
  <name>main_state</name>
  <version>1.2.4</version>
  <description>
    This package provides main state for skuba athome robot.
  </description>
  <maintainer email="skuba2002@gmail.com">skuba</maintainer>
  <license>BSD</license>

  <author>skuba</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <test_depend>python-mock</test_depend>
</package>
